# WikidataTextifier

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.ipynb
docker-entrypoint-initdb/: 01-create-label-db.sh  02-create-wiki-db.sh
src/: WikidataLabel.py  WikidataTextifier.py  __init__.py  utils.py
src/Normalizer/: JSONNormalizer.py  TTLNormalizer.py  __init__.py
src/Textifier/: WikidataTextifier.py  __init__.py  language_variables.json
