[project]
name = "WikidataTextifier"
version = "0.1.0"
description = "Transforms Wikidata entities into text representations."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "babel>=2.17.0",
    "fastapi>=0.116.1",
    "gunicorn>=23.0.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
